--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    compile 'com.getkeepsafe.taptargetview:taptargetview:1.5.1'
     testCompile 'junit:junit:4.12'
 }
